LDEV-4760 Fixed spacing in authoring criteria entry panel

--- a/lams_central/web/css/_learner_base.scss
+++ b/lams_central/web/css/_learner_base.scss
@@ -579,6 +579,14 @@ a.button-add-item:before {
 	padding: 2px;
 }
 
+.rating-criteria-tag .ui-button-icon-only .ui-icon {
+    margin-left: 0px;
+}
+
+.rating-criteria-tag label {
+    font-weight: initial;
+}
+
 #criterias-table {
 	margin-left: 0px;
 	border-bottom: inherit;
